@startuml
!include comun.iuml
hide circle
skinparam linetype ortho

entity "roles" as roles {
  * rol_id : INT <<PK>>
  --
  * nombre : VARCHAR(30)
  descripcion : VARCHAR(120)
}

entity "usuarios" as usuarios {
  * usuario_id : INT <<PK>>
  --
  * rol_id : INT <<FK>>
  * correo : VARCHAR(120) <<UQ>>
  * clave_hash : VARCHAR(200)
  * nombre : VARCHAR(120)
  activo : TINYINT(1)
  bloqueado : TINYINT(1)
}

entity "sesiones" as sesiones {
  * sesion_id : BIGINT <<PK>>
  --
  * usuario_id : INT <<FK>>
  * token : VARCHAR(200) <<UQ>>
  * inicio : DATETIME
  * expira : DATETIME
  dispositivo : VARCHAR(120)
}

entity "auditoria_accesos" as audit {
  * acceso_id : BIGINT <<PK>>
  --
  usuario_id : INT <<FK>>
  * correo : VARCHAR(120)
  * exitoso : TINYINT(1)
  origen : VARCHAR(60)
  * fecha : DATETIME
}
roles ||--o{ usuarios
usuarios ||--o{ sesiones
usuarios ||--o{ audit
@enduml
